--- a/index.html
+++ b/index.html
@@ -11,34 +11,18 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#"
-            >Home <span class="sr-only">(current)</span></a
-          >
-          <a class="nav-item nav-link" href="#">Features</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-          <a class="nav-item nav-link disabled" href="#">Disabled</a>
-        </div>
-      </div>
-    </nav>
     <div class="container">
-      <div class="jumbotron mt-5 mb-5">
-        <h1>GE MDS Field Network Manager V2</h1>
-      </div>
+      <h1 class="text-muted">GE MDS Field Network Manager V2</h1>
+      
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="metrics.html">Metrics</a>
+        </li>
+      </ul>
+
       <h2>Project Synopsis</h2>
       <p>
         GE Industrial Communications (INDC) is a department of General Electric
@@ -71,7 +55,7 @@
         network connections.
       </p>
 
-      <br/>
+      <br />
 
       <h2>Project Plan</h2>
       <a
@@ -79,39 +63,39 @@
         >Available Here</a
       >
 
-      <br/>
+      <br />
 
       <h2>Team Members</h2>
       <table>
-          <thead>
-              <th>Name</th>
-              <th>Username</th>
-          </thead>
-          <tbody>
-              <tr>
-                  <td>Brady Brown</td>
-                  <td>bxb6879</td>
-              </tr>
-              <tr>
-                  <td>Daniel Jones</td>
-                  <td>dkj2972</td>
-              </tr>
-              <tr>
-                  <td>Joshua Morrison</td>
-                  <td>jmm4077</td>
-              </tr>
-              <tr>
-                  <td>Matt Thyng</td>
-                  <td>mdt8740</td>
-              </tr>
-              <tr>
-                  <td>Kal Rabb</td>
-                  <td>kxrvse</td>
-              </tr>
-          </tbody>
+        <thead>
+          <th>Name</th>
+          <th>Username</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Brady Brown</td>
+            <td>bxb6879</td>
+          </tr>
+          <tr>
+            <td>Daniel Jones</td>
+            <td>dkj2972</td>
+          </tr>
+          <tr>
+            <td>Joshua Morrison</td>
+            <td>jmm4077</td>
+          </tr>
+          <tr>
+            <td>Matt Thyng</td>
+            <td>mdt8740</td>
+          </tr>
+          <tr>
+            <td>Kal Rabb</td>
+            <td>kxrvse</td>
+          </tr>
+        </tbody>
       </table>
 
-      <br/>
+      <br />
 
       <h2>Four Ups</h2>
       <a
@@ -119,7 +103,7 @@
         >Available Here</a
       >
 
-      <br/>
+      <br />
 
       <h2>Time Tracking</h2>
       <a
@@ -127,14 +111,13 @@
         >Available Here</a
       >
 
-      <br/>
+      <br />
 
       <h2>Risk Table</h2>
       <a
         href="(https://docs.google.com/spreadsheets/d/1tmSjhvehoqKSVVcPALN06xIqRrkCcz9zVBmR6Co2_H0/edit?usp=sharing"
         >Available Here</a
       >
-      
     </div>
 
     <script
