--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <h1 class="text-muted">GE MDS Field Network Manager V2</h1>
-      
+
       <ul class="nav nav-tabs">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
@@ -118,6 +118,17 @@
         href="(https://docs.google.com/spreadsheets/d/1tmSjhvehoqKSVVcPALN06xIqRrkCcz9zVBmR6Co2_H0/edit?usp=sharing"
         >Available Here</a
       >
+
+      <br />
+
+      <h2>Domain Model</h2>
+      <a
+        href="https://drive.google.com/file/d/1mvlniV8AvdKoO-CBSGlNzIdj2W_v0q9z/view"
+        >Available Here</a
+      >
+
+      <br />
+      <br />
     </div>
 
     <script
